Fixes alignment of footer

--- a/index.css
+++ b/index.css
@@ -202,5 +202,4 @@ table {
 
 footer {
   font-size:11px;
-  margin-left:-150px;
 }
